samples/_failures_safe/1761453604_cc8b28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db21396a.c: In function ‘main’:
./samples/SAFE/__tmp_db21396a.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
